--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-router-hash-link": "^2.4.3",
     "tailwind-merge": "^3.4.0",
