--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-router-hash-link": "^2.4.3",
